--- a/src/components/test.ipynb
+++ b/src/components/test.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\DS_project\\ML_project\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score\n",
@@ -30,7 +39,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['d:\\\\DS_project\\\\ML_project\\\\src\\\\components',\n",
+       " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\python38.zip',\n",
+       " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\DLLs',\n",
+       " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\lib',\n",
+       " 'd:\\\\DS_project\\\\ML_project\\\\venv',\n",
+       " '',\n",
+       " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\lib\\\\site-packages',\n",
+       " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\lib\\\\site-packages\\\\ml_project-0.0.1-py3.8.egg',\n",
+       " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\lib\\\\site-packages\\\\win32',\n",
+       " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
+       " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\lib\\\\site-packages\\\\Pythonwin']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +79,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[100], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexception\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CustomException\n",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexception\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CustomException\n",
       "\u001b[1;31mImportError\u001b[0m: cannot import name 'CustomException' from 'src.exception' (d:\\DS_project\\ML_project\\venv\\lib\\site-packages\\ml_project-0.0.1-py3.8.egg\\src\\exception.py)"
      ]
     }
@@ -51,20 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('/path/to/your/module')\n",
-    "from your_module import YourClass"
+    "from src.logger import logging"
    ]
   },
   {
