--- a/src/components/test.ipynb
+++ b/src/components/test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\DS_project\\ML_project\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score\n",
@@ -39,7 +30,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\DS_project\\ML_project\\src\\components\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append('D:\\DS_project\\ML_project\\src\\components')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -55,10 +81,16 @@
        " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\lib\\\\site-packages\\\\ml_project-0.0.1-py3.8.egg',\n",
        " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\lib\\\\site-packages\\\\win32',\n",
        " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
-       " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\lib\\\\site-packages\\\\Pythonwin']"
+       " 'd:\\\\DS_project\\\\ML_project\\\\venv\\\\lib\\\\site-packages\\\\Pythonwin',\n",
+       " 'D:\\\\DS_project\\\\ML_project\\\\src',\n",
+       " 'D:\\\\DS_project\\\\ML_project\\\\src\\\\**',\n",
+       " 'D:\\\\DS_project\\\\ML_project',\n",
+       " 'D:\\\\DS_project\\\\ML_project\\\\src\\\\components',\n",
+       " 'D:\\\\DS_project\\\\ML_project\\\\src',\n",
+       " 'D:\\\\DS_project\\\\ML_project\\\\src']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,6 +103,15 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exception import CustomException"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
      "ename": "ImportError",
@@ -79,18 +120,19 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexception\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CustomException\n",
+      "Cell \u001b[1;32mIn[34], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdata_tranformation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataTransformation\n",
+      "File \u001b[1;32md:\\DS_project\\ML_project\\src\\components\\data_tranformation.py:11\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OneHotEncoder,StandardScaler\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexception\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CustomException\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlogger\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m logging\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n",
       "\u001b[1;31mImportError\u001b[0m: cannot import name 'CustomException' from 'src.exception' (d:\\DS_project\\ML_project\\venv\\lib\\site-packages\\ml_project-0.0.1-py3.8.egg\\src\\exception.py)"
      ]
     }
    ],
    "source": [
-    "from src.exception import CustomException"
+    "from data_tranformation import DataTransformation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
